# solscan-mcp

./: Cargo.toml  README.md  TOOLS.md
src/: main.rs
src/solscan_mcp/: api.rs  mod.rs
src/solscan_mcp/requests/: account.rs  block.rs  market.rs  mod.rs  nft.rs  token.rs  transaction.rs
