[package]
name = "solscan-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for Solscan API"

[dependencies]
rmcp = { version = "0.1.0", features = ["server", "macros", "transport-io"] }
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
reqwest = { version = "0.11.23", features = ["json"] }
anyhow = "1.0.78"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
thiserror = "1.0.51"
async-trait = "0.1.75"
schemars = "0.8.16"
